--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <table cellspacing=20>
     <tr>
-      <td><img src="tanya.png" alt="tanya profilbild"></td>
+      <td><img src="tanya.jpg" alt="tanya profilbild"></td>
       <td>
         <h1>Tanya Chamoun</h1>
         <p><em>My personal site <strong> <a href="https://www.linkedin.com/in/tanya-chamoun-941628182/?originalSubdomain=se">Min profil till Linkedin</a></strong>.</em></p>
