--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
   </tr>
 </table>
   <hr>
-  <a href="hobbies.html">
+  <a href="Hobbies.html">
     <h3>My hobbies</h3>
   </a>
   <a href="contact.html">
